--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,21 @@
-<p>
-  nav works!
-</p>
+<div class="container-fluid">
+  <nav class="navbar navbar-light bg-transparent justify-content-between">
+    <a class="navbar-brand" href="#">
+      <img src="/assets/brand/gratia-logo.png" width="30" height="30" class="d-inline-block align-top mr-2" alt=""> Gratia
+    </a>
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link p-4 m-3" href="#">Active</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link p-4 m-3" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link p-4 m-3" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link p-4 m-3" href="#">Disabled</a>
+      </li>
+    </ul>
+  </nav>
+</div>
