--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -14,3 +14,28 @@
     width: 60px;
     height: 115px;
 }
+.carousel-indicators {
+  flex-direction: column;
+  margin-left: 0;
+  padding-left: 1rem;
+}
+.carousel-indicators li {
+  text-indent: 0;
+  width: 70px;
+  height: 30px;
+  margin-bottom: 20px;
+  background-color: transparent;
+  cursor: pointer;
+}
+.carousel-indicators li a {
+  font-size: 16px;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+}
+.carousel-indicators li.active a {
+  color: #d89b64;
+}
+.carousel-indicators li.active {
+  border-bottom: 2px solid #d89b64;
+}
