--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,15 +1,26 @@
 <div class="row justify-content-center">
-  <div id="carouselExampleControls" class="carousel slide w-100" data-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide w-100" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
+        <a href="">01</a>
+      </li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1">
+        <a href="">02</a>
+      </li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2">
+        <a href="">03</a>
+      </li>
+    </ol>
     <div class="carousel-inner w-50">
       <div class="{{'carousel-item'+ setActiveSlide(i)}}" *ngFor="let slide of slides; let i = index">
         <img class="d-block w-100" src="{{slide.img_link}}" alt="{{slide.name}}">
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
